# PyTeamTalk

./: pyproject.toml  readme.md  setup.py  teamtalk.py
doc/: bots.md  quickstart.md
examples/: check_servers.py  numbers.py  spotify_bot.py
teamtalk/: teamtalk.py
