[project]
name = "PyTeamTalk"
version = "0.2"
description = "A human-friendly wrapper around the TeamTalk 5 TCP API"
readme = "readme.md"
requires-python = ">=3"
authors = [
    { name = "Carter Temm", email = "crtbraille@gmail.com" }
]
urls = { Homepage = "http://github.com/cartertemm/pyteamtalk" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
license = "MIT"
dependencies = [
    "telnetlib-313-and-up; python_version >= '3.13'"
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
